feat(config): add env variables

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,8 @@
 # MISC
 NODE_ENV="development"
 
+# OPENAI
+OPENAI_API_KEY="openai_api_key_123ABC"
+
 # RELEASE IT TOKEN
 GITHUB_TOKEN="github_pat_123ABC"
