--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
     "@release-it/conventional-changelog": "7.0.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.8.3",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
@@ -41,5 +42,9 @@
     "release-it": "^16.2.1",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "openai": "^4.52.1"
   }
 }
