--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
     "@release-it/conventional-changelog": "7.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.8.3",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -44,6 +45,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "openai": "^4.52.1"
   }
